# speakit_rust

./: Cargo.toml  README.md  data.txt
src/: lib.rs  main.rs
tests/: integration_tests.rs
