[package]
name = "speakit_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#add any dependencies here

[[test]]
name = "integration_tests"
path = "/Users/richard/projects/speakit_rust/tests/integration_tests.rs"
